--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
+    "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
