Added production config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "rimraf dist && webpack --config webpack.prod.config.js --progress --profile --color"
+    "build": "webpack --config webpack.config.prod.js"
   },
   "author": "Muteshi",
   "browserslist": "> 1% , last 2 versions",
